--- a/src/scss/palette.scss
+++ b/src/scss/palette.scss
@@ -3,6 +3,7 @@ $black: #000000;
 $off_white_opaque: rgba(240, 240, 240, 0.4);
 $off_white_opaque_strong: rgba(240, 240, 240, 0.6);
 $blue_opaque: rgba(0, 110, 187, 0.4);
+$magenta: rgba(164, 18, 93, 1);
 $off_white: #f0f0f0;
 $shadow_black: #222222;
 $white: #ffffff;
